fixed horizontal scroll issue on chat feed in app.css

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,8 @@
   .chat-feed {
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     /* background-color: rgb(240, 240, 240); */
     background-image: url('./assets/virus2.jpg');
     background-position: center;
